tests/parser-test-files/bad-files/parse-loop.2.error
error: Malformed loop expression
  --> test:4:24
   |
 4 |  (define f (loop :alabel))
   |                         ^ expected a loop body
