tests/parser-test-files/bad-files/parse-loop.2.coal
;; BAD: Parse Loop
(package test-parser)

(define f (loop :alabel))
